--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/app": "^12.3.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "firebase": "^8.8.0",
     "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react-native": "^0.62.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
-    "react-native-swiper": "^1.6.0"
+    "react-native-star-rating": "^1.0.5",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
