--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^12.5.0",
     "@react-native-firebase/auth": "^12.5.0",
+    "@react-native-firebase/database": "^12.7.3",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
